editor-components/call_to_action/call_to_action2/call_to_action2.module.scss
@use '../../../composer-base-components/base/utitilities/viewports.module.scss' as *;

@keyframes button {
  70% {
    box-shadow: 0 0 0 var(--glow-size, 15px) var(--composer-primary-color);
    opacity: 0;
  }

  100% {
    box-shadow: 0 0 0 var(--composer-primary-color);
    opacity: 0;
  }
}

.container {
  position: relative;

  &.with-overlay {
    z-index: 103;
  }

  .background {
    top: 0px;
    left: 0px;
    position: absolute;
    width: 100%;
    height: 80%;
    background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);

    &.no-image {
      height: 100%;
    }
  }

  .max-content {
    position: relative;
    z-index: 1;

    .wrapper {
      width: 100%;
      position: relative;
      z-index: 1;
      color: var(--composer-font-color-secondary);
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      gap: var(--composer-gap-lg);

      .header {
        display: flex;
        align-items: center;
        width: 100%;
        gap: var(--composer-gap-md);

        .titles {
          flex: 1;

          .subtitle,
          .title,
          .description {
            content: "";
          }
        }

        .button-container {
          width: fit-content;
          display: flex;
          gap: var(--composer-gap-sm);
          flex-wrap: wrap;
          align-items: stretch;
          max-width: 50%;

          .button {
            content: "";

            .button-text {
              content: "";
            }
          }
        }

        &.center {
          flex-direction: column;

          .button-container {
            justify-content: center;
          }
        }
      }

      .media-wrapper {
        width: 100%;
        position: relative;
        border-radius: var(--composer-border-radius-xs);
        overflow: hidden;

        .video-player {
          width: 100%;
          height: 100%;
          display: block;
          object-fit: cover;
          border-radius: inherit;
        }

        .thumbnail-container {
          position: relative;
          width: 100%;
          height: 100%;
          display: flex;
          justify-content: center;
          align-items: center;
          cursor: pointer;

          .image {
            width: 100%;
            height: 100%;
            display: block;
            object-fit: cover;
            object-position: center;
            border-radius: inherit;
          }

          .image-overlay {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            background: var(--composer-overlay-color);
            z-index: 0;
            pointer-events: none;
            border-radius: inherit;
          }
        }

        .play-icon-box {
          position: absolute;
          left: 50%;
          top: 50%;
          transform: translate(-50%, -50%);
          border-radius: 50%;
          background-color: var(--composer-font-color-secondary);
          width: 80px;
          height: 80px;
          display: flex;
          align-items: center;
          justify-content: center;
          cursor: pointer;
          transition: all 0.4s ease;
          z-index: 1;

          .play-icon {
            color: var(--composer-primary-color);
            font-size: 30px;
            width: 30px;
            height: 30px;
          }

          &::before {
            color: var(--composer-primary-color);
            animation-name: button;
            animation-duration: 3s;
            animation-iteration-count: infinite;
            animation-delay: 0.9s;
            content: " ";
            position: absolute;
            top: 0px;
            left: 0px;
            width: 100%;
            height: 100%;
            border-radius: 50%;
            box-shadow: 0 0 0 0 var(--composer-primary-color);
            opacity: 0.6;
            z-index: -1;
          }

          &::after {
            color: var(--composer-primary-color);
            animation-name: button;
            animation-duration: 3s;
            animation-iteration-count: infinite;
            animation-delay: 0.3s;
            content: " ";
            position: absolute;
            top: 0px;
            left: 0px;
            width: 100%;
            height: 100%;
            border-radius: 50%;
            box-shadow: 0 0 0 0 var(--composer-primary-color);
            opacity: 0.6;
            z-index: -1;
          }

          &:hover {
            background-color: var(--composer-primary-color);

            .play-icon {
              color: var(--composer-font-color-secondary);
            }
          }
        }

      }
    }

  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .wrapper {
        .overlay {
          .video-container {
            width: 90%;
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      .wrapper {
        .header {
          flex-direction: column;
          gap: var(--composer-gap-md);

          .titles {
            align-items: center;

            .subtitle {
              transform: translateX(0);

              &::before {
                display: none;
              }
            }

            .subtitle,
            .title,
            .description {
              text-align: center;
            }
          }

          .button-container {
            max-width: 100%;
          }
        }

        .media-wrapper {
          .play-icon-box {
            width: 40px;
            height: 40px;

            .play-icon {
              font-size: 1.25rem;
              width: 15px;
              height: 15px;
            }
          }
        }
      }
    }
  }
}

